RESOLVED FIXED307632
MP4 with Opus track isn't usable with decodeAudioData
https://bugs.webkit.org/show_bug.cgi?id=307632
Summary MP4 with Opus track isn't usable with decodeAudioData
Jean-Yves Avenard [:jya]
Reported 2026-02-11 19:25:36 PST
AudioFileReaderCocoa uses an AudioFile to read the content, but AudioFile doesn't support opus in mp4. We should use an AVAssetReader instead.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-11 19:25:42 PST
Jean-Yves Avenard [:jya]
Comment 2 2026-02-11 23:38:13 PST
EWS
Comment 3 2026-03-12 06:37:34 PDT
Committed 309140@main (2cfd74cacfc8): <https://commits.webkit.org/309140@main> Reviewed commits have been landed. Closing PR #58484 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.